overlays/uksouth-prod/txm/harmonia/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: harmonia.${cluster_name}.${cluster_location}.bink.sh-harmonia
spec:
  ingressClassName: traefik
  rules:
    - host: harmonia.${cluster_name}.${cluster_location}.bink.sh
      http:
        paths:
          - path: /txm/config/keys
            pathType: Prefix
            backend:
              service:
                name: harmonia-api
                port:
                  number: 80
          - path: /txm/matching/force_match
            pathType: Prefix
            backend:
              service:
                name: harmonia-api
                port:
                  number: 80
  tls:
    - hosts:
        - harmonia.${cluster_name}.${cluster_location}.bink.sh
